移植已放置回收与挂起恢复服务到 1.12.2